--- a/Style.css
+++ b/Style.css
@@ -498,7 +498,7 @@ li:last-child {
 
 .right-column {
   border-top-left-radius: 20px;
-  background-image: url(./img/Screenshot\ 2024-07-18\ at\ 7.31.35\ PM.png);
+  background-image: url(./img/screen.jpg);
 }
 
 
